@@ -10,8 +10,7 @@ import com.github.scribejava.core.utils.Preconditions;
 public class OdnoklassnikiApi extends DefaultApi20 {
 
     private static final String AUTHORIZE_URL
-            = "http://www.odnoklassniki.ru/oauth/authorize?client_id=%s&response_type=code&redirect_uri=%s";
-    private static final String SCOPED_AUTHORIZE_URL = String.format("%s&scope=%%s", AUTHORIZE_URL);
+            = "https://connect.ok.ru/oauth/authorize?client_id=%s&response_type=code&redirect_uri=%s";
 
     protected OdnoklassnikiApi() {
     }
@@ -26,19 +25,26 @@ public class OdnoklassnikiApi extends DefaultApi20 {
 
     @Override
     public String getAccessTokenEndpoint() {
-        return "http://api.odnoklassniki.ru/oauth/token.do";
+        return "https://api.ok.ru/oauth/token.do";
     }
 
     @Override
     public String getAuthorizationUrl(OAuthConfig config) {
         Preconditions.checkValidUrl(config.getCallback(),
                 "Valid url is required for a callback. Odnoklassniki does not support OOB");
+
+        final StringBuilder urlBuilder = new StringBuilder(String.format(AUTHORIZE_URL,
+                config.getApiKey(), OAuthEncoder.encode(config.getCallback())));
+
         if (config.hasScope()) {
-            return String.format(SCOPED_AUTHORIZE_URL, config.getApiKey(), OAuthEncoder.encode(config.getCallback()),
-                    OAuthEncoder.encode(config.getScope()));
-        } else {
-            return String.format(AUTHORIZE_URL, config.getApiKey(), OAuthEncoder.encode(config.getCallback()));
+            urlBuilder.append("&scope=").append(OAuthEncoder.encode(config.getScope()));
         }
+
+        final String state = config.getState();
+        if (state != null) {
+            urlBuilder.append("&state=").append(OAuthEncoder.encode(config.getState()));
+        }
+        return urlBuilder.toString();
     }
 
     @Override
