@@ -3,6 +3,7 @@
  * add OSGI manifest metadata
  * apiSecret is not mandatory parameter in config (to use on client sides and other flows without need of the API secret)
  * implement OAuth2 Authorization Response parsing in the OAuth20Service (to extract code and state from url, useful for Android)
+ * update ok.ru API urls, add 'state' support, add refresh token to the example
 
 [2.4.0]
  * APIs 2.0 can define different endpoints for access token and for refresh token (the same urls by default)
